[package]
name = "mulasvpn"
version = "0.1.0"
edition = "2024"
authors = ["Sardor Azimov"]
description = "A beautiful, native and open-source WireGuard client for macOS."
license = "MIT"
repository = "https://github.com/Miransas/mulasvpn"
readme = "README.md"
keywords = ["vpn", "wireguard", "macos", "privacy"]
categories = ["network-programming"]

[dependencies]

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# Error Handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Date & Time
chrono = { version = "0.4", features = ["serde"] }

# Directories
directories = "6"

# Keychain
keyring = "3"

# Utilities
once_cell = "1"

# Config
config = "0.15"